--- a/alpha/citi_user/templates/registration/registration_form.html
+++ b/alpha/citi_user/templates/registration/registration_form.html
@@ -6,7 +6,7 @@
     <form class="register-login" method="post">
       {% csrf_token %}
       <p>
-	{{ form.username.label_tag }}<br>
+	{{ form.username.label_tag }}<a href="{% url auth_login %}" class="forgot">Already have an account?</a><br>
 	{{ form.username }}
 	{% for error in form.username.errors %}
 	<span class="error">{{ error }}</span>
