--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -48,13 +48,13 @@
     <p>
       {% if page_num > 1 %}
 	{% if page_num == 2 %}
-	  <a class="button page" href="{% url event_browse_tags_date old_tags=current_tags date=page_date %}">Prev</a>
+	  <a class="button" href="{% url event_browse_tags_date old_tags=current_tags date=page_date %}">Prev</a>
 	  {% else %}
-	  <a class="button page" href="{% url event_browse_tags_date_num old_tags=current_tags date=page_date num=page_less %}">Prev</a>
+	  <a class="button" href="{% url event_browse_tags_date_num old_tags=current_tags date=page_date num=page_less %}">Previous</a>
 	{% endif %}
       {% endif %}
       {% if page_more < pages|length %}
-      <a class="button page" href="{% url event_browse_tags_date_num old_tags=current_tags date=page_date num=page_more %}">Next</a>
+      <a class="button next" href="{% url event_browse_tags_date_num old_tags=current_tags date=page_date num=page_more %}">Next</a>
       {% endif %}
     </p>
 
@@ -62,7 +62,7 @@
       {% for numb in pages %}
         {% if numb > 0 %}
 	  <li>
-	    <a class="current" href="{% url event_browse_tags_date_num old_tags=current_tags date=page_date num=numb %}">{{ numb }}</a>
+		<a {% if page_num == numb %}class="current"{% endif %} href="{% url event_browse_tags_date_num old_tags=current_tags date=page_date num=numb %}">{{ numb }}</a>
 	  </li>    
         {% endif %}
       {% endfor %}
