--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -103,6 +103,9 @@ a:hover { text-decoration: underline; }
 #date-nav a:hover { height: 38px; background-color: #fbfaf6 !important; border-bottom: 2px solid #fff; text-decoration: none; }
 #date-nav a.current { background-color: #fff !important; }
 
+#back { padding: 2px 0 12px; border-bottom: 1px solid #ccc; font-size: 12px; font-weight: bold; }
+#back a { padding: 10px; }
+
 #main { overflow: hidden; width: 940px; padding: 10px 0 60px; }
 
 #tags { width: 140px; margin: 20px 10px 0 0; float: left; font-size: 12px; }
@@ -146,7 +149,7 @@ a:hover { text-decoration: underline; }
 .detail li { float: left; width: 178px; padding-left: 22px; height: 40px; line-height: 16px; }
 .detail .date { background: url('../img/icons.png') no-repeat 0 -166px; }
 .detail .loc { background: url('../img/icons.png') no-repeat 0 -84px; }
-.detail .price { background: url('../img/icons.png') no-repeat 0 -123px; }
+.detail .price { background: url('../img/icons.png') no-repeat 0 -125px; }
 
 .body h1 { margin: 25px 0; font-size: 20px; font-weight: bold; }
 .small { color: #999; font-size: 11px; }
@@ -178,11 +181,11 @@ form .description { display: block; margin-top: 5px; color: #999; font-size: 11p
 form input.error { border: 3px solid red; }
 form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 
-.button { color: #fff; cursor: pointer; background: #4f53a9; background: -moz-linear-gradient(top, #4f53a9 0%, #24267e 100%); background: -webkit-linear-gradient(top, #4f53a9 0%,#24267e 100%); background: -ms-linear-gradient(top, #4f53a9 0%,#24267e 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f53a9', endColorstr='#24267e',GradientType=0 ); background: linear-gradient(top, #4f53a9 0%,#24267e 100%); box-shadow: 1px 2px 0 #d9d9d9; text-shadow: 1px 1px 0 #000; border-top: 1px solid #8183bf; border-left: 1px solid #5a5caa; border-right: 1px solid #242669; border-bottom: 1px solid #171949; -moz-border-radius: 5px; border-radius: 5px; height: 35px; margin-top: 30px; padding: 0 20px; font-size: 13px; }
+.button { display: table-cell; height: 35px; margin-top: 30px; padding: 0 20px; background: #4f53a9; background: -moz-linear-gradient(top, #4f53a9 0%, #24267e 100%); background: -webkit-linear-gradient(top, #4f53a9 0%,#24267e 100%); background: -ms-linear-gradient(top, #4f53a9 0%,#24267e 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f53a9', endColorstr='#24267e',GradientType=0 ); background: linear-gradient(top, #4f53a9 0%,#24267e 100%); box-shadow: 1px 2px 0 #d9d9d9; border-top: 1px solid #8183bf; border-left: 1px solid #5a5caa; border-right: 1px solid #242669; border-bottom: 1px solid #171949; -moz-border-radius: 5px; border-radius: 5px; color: #fff; cursor: pointer; font-size: 13px; line-height: 35px; text-shadow: 1px 1px 0 #000; }
 .button.close { margin-top: 0; }
-.button:hover { background: -moz-linear-gradient(top, #6568b7 0%, #32358a 100%); background: -webkit-linear-gradient(top, #5f61b3 0%, #2c2f85 100%); background: -ms-linear-gradient(top, #6568b7 0%, #32358a 100%); background: linear-gradient(top, #6568b7 0%, #32358a 100%); }
+.button:hover { background: -moz-linear-gradient(top, #6568b7 0%, #32358a 100%); background: -webkit-linear-gradient(top, #5f61b3 0%, #2c2f85 100%); background: -ms-linear-gradient(top, #6568b7 0%, #32358a 100%); background: linear-gradient(top, #6568b7 0%, #32358a 100%); text-decoration: none; }
 .button:active { background: #494da0;	}
-.button.page { width: 90px; }
+.button.next { padding: 0 30px; }
 
 #ads { width: 125px; padding: 20px 0 0 11px; overflow: hidden; }
 #ads p { margin-bottom: 10px; color: #999; font-size: 11px; }
@@ -194,8 +197,10 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 #footer a { color: #343796; }
 
 .newcal-date-popup {
+	position: relative;
+	z-index: 1000;
   padding: 3px;
-  background: #e8e8e8;
+  background: #eaeaea;
   border: 1px solid #ccc;
   border-radius: 4px;
   -moz-border-radius: 4px;
@@ -254,15 +259,16 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 	border-radius: 2px;
 	color: #333;
   cursor: pointer;
+  border: 1px solid #ddd;
 }
 .newcal-day:hover { background: #343796; border-color: #343796; color: #fff; } 
-.newcal-past { background: #f6f6f6; }
+.newcal-past { background: #f6f6f6; border: 0; }
 .newcal-today { background: #fff; }
 
 
 .newtime-frame { 
   padding: 3px;
-  background: #e8e8e8;
+  background: #eaeaea;
   border: 1px solid #ccc;
   border-radius: 4px;
   -moz-border-radius: 4px;
