--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -3,24 +3,33 @@
 {% block content %}
 
   <section class="body noborder">
-    <h1>Post Event</h1>
+    {% block page_title %}<h1>Post Event</h1>{% endblock %}
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <ul>
-	{% if form.email %}<li class="label">{{ form.email.label_tag }}</li><li>{{ form.email }}</li><li id="email-info">{% for error in form.email.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>{% endif %}
+	{% if form.email %}<li class="label">{{ form.email.label_tag }}</li>
+	<li>{{ form.email }}</li>
+	<li id="email-info">{% for error in form.email.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>{% endif %}
 	
-	<li class="label">{{ form.name.label_tag }}</li><li>{{ form.name }}</li><li id="name-info">{% for error in form.name.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
+	<li class="label">{{ form.name.label_tag }}</li><li>{{ form.name }}</li>
+	<li id="name-info">{% for error in form.name.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 
 
-	<li class="label">{{ form.location.label_tag }}</li><li>{{ form.location }}</li><li id="location-info">{% for error in form.location.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
+	<li class="label">{{ form.location.label_tag }}</li>
+	<li>{{ form.location }}</li>
+	<li id="location-info">{% for error in form.location.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 	
-	<li class="label">{{ form.start_time.label_tag }}</li><li>{{ form.start_time }}
+	<li class="label">{{ form.start_time.label_tag }}</li>
+	<li>{{ form.start_time }}
 	  <a href="" class="addevent" id="addevent">+ Add end time</a></li>
 	<li id="when-info">{% for error in form.start_time.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 	
-	<li class="label end_time">{{ form.end_time.label_tag }}</li><li class="end_time">{{ form.end_time }}
+	<li class="label end_time">{{ form.end_time.label_tag }}</li>
+	<li class="end_time">{{ form.end_time }}
 	  <a href="" id="remove_time" class="addevent">- Remove end time</a></li>
-	<li class="label">{{ form.price.label_tag }}<span class="description">Optional</span></li><li>{{ form.price }}</li><li id="price-info">{% for error in form.price.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>	
+	<li class="label">{{ form.price.label_tag }}<span class="description">Optional</span></li>
+	<li>{{ form.price }}</li>
+	<li id="price-info">{% for error in form.price.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>	
 	<li class="label">
 	  <label for="{{ form.description.html_name }}">{{ form.description.label }}<span class="description">Optional</span></label>
 	</li>
@@ -35,6 +44,8 @@
 	    <li id="tag-info">{% for error in form.tags.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
 	  </ul>
 	</li>
+	{% block current_picture %}{% endblock %}
+
 	<li class="label">{{ form.picture.label_tag }}</li>
 	<li>{{ form.picture }}</li>
 	<li id="image-info">{% for error in form.username.errors %}<span class="error">{{ error }}</span> {% endfor %}</li>
