--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -87,7 +87,7 @@ a:hover { text-decoration: underline; }
 
 #city-nav { position: absolute; bottom: 2px; right: 23px; font-size: 13px; float: right; width: auto; height: 32px; line-height: 33px; }
 #city-nav .downtick { position: absolute; top: 0; right: 2px; width: 0; height: 0; border-left: 4px solid transparent; border-right: 4px solid transparent; border-top: 4px solid #fff; margin: 15px 8px 0 6px }
-#city-nav a { display: block; height: 32px; width: auto; padding: 0 27px 0 13px; border-radius: 2px; cursor: pointer; text-align: right; }
+#city-nav a { display: block; height: 32px; width: auto; padding: 0 25px 0 15px; border-radius: 2px; cursor: pointer; text-align: right; }
 #city-nav a.active { background: #393c97; box-shadow: 1px 1px 0 #000; }
 
 #city-widget { display: none; position: absolute; width: 210px; min-height: 1px; top: 73px; right: 23px; padding: 10px 20px; background: #393c97; border-radius: 3px; box-shadow: 1px 1px 0 #000; color: #d7d8eb; font-size: 12px; font-weight: bold; }
@@ -124,7 +124,7 @@ a:hover { text-decoration: underline; }
 
 #pagination { margin-top: 13px; }
 #pagination li { float: left; }
-#pagination a { padding: 4px 7px; font-size: 11px; font-weight: bold; }
+#pagination a { line-height: 11px; display: inline-block; padding: 5px 7px; font-size: 11px; font-weight: bold; }
 #pagination a:hover { background: #4f53a9; color: #fff; text-decoration: none; }
 #pagination a.current { background: #ddd; color: #000; }
 
@@ -171,7 +171,7 @@ input.time { width: 100px; margin-left: 10px; background: #f9f9f9 url('../img/ic
 select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-radius: 0px; font-size: 12px; vertical-align: top; }
 textarea { height: 75px; }
 
-form .addevent { margin: -2px 0 0 5px; font-size: 11px; font-weight: bold; }
+form .addevent { display: inline-block; margin-left: 5px; vertical-align: top; line-height: 32px; font-size: 11px; font-weight: bold; }
 form .end_time { display: none; }
 form .forgot { padding-left: 3px; margin: 4px; font-size: 11px; }
 form .password { font-size: 16px; }
@@ -181,7 +181,7 @@ form .description { display: block; margin-top: 5px; color: #999; font-size: 11p
 form input.error { border: 3px solid red; }
 form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 
-.button { display: table-cell; height: 35px; margin-top: 30px; padding: 0 20px; background: #4f53a9; background: -moz-linear-gradient(top, #4f53a9 0%, #24267e 100%); background: -webkit-linear-gradient(top, #4f53a9 0%,#24267e 100%); background: -ms-linear-gradient(top, #4f53a9 0%,#24267e 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f53a9', endColorstr='#24267e',GradientType=0 ); background: linear-gradient(top, #4f53a9 0%,#24267e 100%); box-shadow: 1px 2px 0 #d9d9d9; border-top: 1px solid #8183bf; border-left: 1px solid #5a5caa; border-right: 1px solid #242669; border-bottom: 1px solid #171949; -moz-border-radius: 5px; border-radius: 5px; color: #fff; cursor: pointer; font-size: 13px; line-height: 35px; text-shadow: 1px 1px 0 #000; }
+.button { display: inline-block; margin-top: 30px; padding: 0 20px; background: #4f53a9; background: -moz-linear-gradient(top, #4f53a9 0%, #24267e 100%); background: -webkit-linear-gradient(top, #4f53a9 0%,#24267e 100%); background: -ms-linear-gradient(top, #4f53a9 0%,#24267e 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4f53a9', endColorstr='#24267e',GradientType=0 ); background: linear-gradient(top, #4f53a9 0%,#24267e 100%); box-shadow: 1px 2px 0 #d9d9d9; border-radius: 5px; border-top: 1px solid #8183bf; border-left: 1px solid #5a5caa; border-right: 1px solid #242669; border-bottom: 1px solid #171949; -moz-border-radius: 5px; color: #fff; cursor: pointer; font-size: 13px; line-height: 35px; text-shadow: 1px 1px 0 #000; }
 .button.close { margin-top: 0; }
 .button:hover { background: -moz-linear-gradient(top, #6568b7 0%, #32358a 100%); background: -webkit-linear-gradient(top, #5f61b3 0%, #2c2f85 100%); background: -ms-linear-gradient(top, #6568b7 0%, #32358a 100%); background: linear-gradient(top, #6568b7 0%, #32358a 100%); text-decoration: none; }
 .button:active { background: #494da0;	}
@@ -197,8 +197,9 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 #footer a { color: #343796; }
 
 .newcal-date-popup {
-	position: relative;
-	z-index: 1000;
+  width: 100%;
+  position: relative;
+  z-index: 1000;
   padding: 3px;
   background: #eaeaea;
   border: 1px solid #ccc;
@@ -210,15 +211,17 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
   -webkit-box-shadow: 2px 2px 5px #999;
 }
 .newcal-table {
-  width: 100%;
+  width: auto;
   border-spacing: 2px;
   border-collapse: separate;
   clear: both;
 }
 .newcal-header {
-	height: 26px;
-	margin: 0 0 2px;
-  background: #343796; 
+border: 1px solid red;
+  display: block;
+  height: 26px;
+  width: 100% !important;
+  margin: 0 0 2px;
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -226,7 +229,18 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
   font-weight: bold;
   line-height: 18px;
 }
+.newcal-month {
+height: 50px;
+border: 1px solid green;
+  display: block;
+  width: auto;
+  background: #343796; 
+}
 .newcal-month-left, .newcal-month-right {
+	position: absolute;
+	top: 0;
+	left: 0;
+	color: #fff;
   height: 16px;
 	padding: 5px 15px;
   float: left;
@@ -235,8 +249,8 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
   font-size: 18px;
   line-height: 14px;
 }
-.newcal-month-right { float: right; }
-.newcal-month-left:hover, .newcal-month-right:hover { background: #4d51a8; }
+.newcal-month-right { right: 0; }
+.newcal-month-left:hover, .newcal-month-right:hover { background: #4d51a8; color: #fff; text-decoration: none; }
 
 
 
@@ -248,10 +262,6 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
   text-align: center;
 }
 
-.newcal-month {
-  text-align: center;
-  padding: 5px;
-}
 .newcal-day {
   text-align: center;
   padding: 6px;
@@ -259,7 +269,7 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 	border-radius: 2px;
 	color: #333;
   cursor: pointer;
-  border: 1px solid #ddd;
+  box-shadow: 1px 1px 0 #ddd;
 }
 .newcal-day:hover { background: #343796; border-color: #343796; color: #fff; } 
 .newcal-past { background: #f6f6f6; border: 0; }
