--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -197,7 +197,7 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 #footer a { color: #343796; }
 
 .newcal-date-popup {
-  width: 100%;
+  width: 250px;
   position: relative;
   z-index: 1000;
   padding: 3px;
@@ -211,17 +211,15 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
   -webkit-box-shadow: 2px 2px 5px #999;
 }
 .newcal-table {
-  width: auto;
+  width: 100%;
   border-spacing: 2px;
   border-collapse: separate;
   clear: both;
 }
 .newcal-header {
-border: 1px solid red;
-  display: block;
-  height: 26px;
-  width: 100% !important;
-  margin: 0 0 2px;
+	height: 26px;
+	margin: 0 0 2px;
+  background: #343796; 
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -229,18 +227,7 @@ border: 1px solid red;
   font-weight: bold;
   line-height: 18px;
 }
-.newcal-month {
-height: 50px;
-border: 1px solid green;
-  display: block;
-  width: auto;
-  background: #343796; 
-}
 .newcal-month-left, .newcal-month-right {
-	position: absolute;
-	top: 0;
-	left: 0;
-	color: #fff;
   height: 16px;
 	padding: 5px 15px;
   float: left;
@@ -249,8 +236,8 @@ border: 1px solid green;
   font-size: 18px;
   line-height: 14px;
 }
-.newcal-month-right { right: 0; }
-.newcal-month-left:hover, .newcal-month-right:hover { background: #4d51a8; color: #fff; text-decoration: none; }
+.newcal-month-right { float: right; }
+.newcal-month-left:hover, .newcal-month-right:hover { background: #4d51a8; }
 
 
 
@@ -262,6 +249,10 @@ border: 1px solid green;
   text-align: center;
 }
 
+.newcal-month {
+  text-align: center;
+  padding: 5px;
+}
 .newcal-day {
   text-align: center;
   padding: 6px;
@@ -269,7 +260,7 @@ border: 1px solid green;
 	border-radius: 2px;
 	color: #333;
   cursor: pointer;
-  box-shadow: 1px 1px 0 #ddd;
+  border: 1px solid #ddd;
 }
 .newcal-day:hover { background: #343796; border-color: #343796; color: #fff; } 
 .newcal-past { background: #f6f6f6; border: 0; }
