--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -197,46 +197,10 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 #footer a { color: #343796; }
 
 
-.newcal-date-popup {
-  width: 250px;
-  position: relative;
-  z-index: 1000;
-  padding: 3px;
-  background: #eaeaea;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  box-shadow: 2px 2px 5px #999;
-  -moz-box-shadow: 2px 2px 5px #999;
-  -webkit-box-shadow: 2px 2px 5px #999;
-}
-.newcal-table {
-  width: 100%;
-  border-spacing: 2px;
-  border-collapse: separate;
-  clear: both;
-}
-.newcal-header {
-	height: 26px;
-	margin: 0 0 2px;
-  background: #343796; 
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  color: #fff;
-  font-weight: bold;
-  line-height: 18px;
-}
-.newcal-month-left, .newcal-month-right {
-  height: 16px;
-	padding: 5px 15px;
-  float: left;
-	border-radius: 4px;
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 14px;
-}
+.newcal-date-popup { position: relative; z-index: 1000; width: 250px; padding: 3px; background: #eaeaea; border: 1px solid #ccc; border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; box-shadow: 2px 2px 5px #999; -moz-box-shadow: 2px 2px 5px #999; -webkit-box-shadow: 2px 2px 5px #999; }
+.newcal-table { width: 100%; border-spacing: 2px; border-collapse: separate; clear: both; }
+.newcal-header { height: 26px; margin: 0 0 2px; background: #343796; border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; color: #fff; font-weight: bold; line-height: 18px; }
+.newcal-month-left, .newcal-month-right { height: 16px; padding: 5px 15px; float: left; border-radius: 4px; cursor: pointer; font-size: 18px; line-height: 14px; }
 .newcal-month-right { float: right; }
 .newcal-month-left:hover, .newcal-month-right:hover { background: #4d51a8; }
 .newcal-day-head { padding-bottom: 2px; color: #888; font-size: 12px; text-align: center; }
@@ -245,6 +209,7 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 .newcal-day:hover { background: #343796; border-color: #343796; color: #fff; } 
 .newcal-past { background: #f6f6f6; border: 0; }
 .newcal-today { background: #fff; }
+
 
 .newtime-frame { padding: 3px; background: #eaeaea; border: 1px solid #ccc; border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; box-shadow: 2px 2px 5px #999; -moz-box-shadow: 2px 2px 5px #999; -webkit-box-shadow: 2px 2px 5px #999; }
 .newtime-header { background: #fdd; line-height: 32px; font-size: 14px; text-align: center; }
@@ -256,5 +221,6 @@ form span.error { display:block; padding: 0 0 12px 10px; color: red; }
 .newtime-minutes { float: left; text-align: center; }
 .newtime-period { float: left; text-align: left; }
 .newtime-footer { clear: both; }
+
 
 a.fdbk_tab_bottom { right: 20% !important; }
