reduced image width to 200px on event detail page

--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -133,7 +133,7 @@ a:hover { text-decoration: underline; }
 .body a { font-weight: bold; }
 .noborder { border: 0; }
 
-#photo { float: left; width: 250px; padding-top: 20px; }
+#photo { float: left; width: 200px; padding-top: 20px; }
 #photo img { display: block; }
 
 .events li { position: relative; display: block; margin: 20px 0; color: #666; height: 40px; }
@@ -143,6 +143,7 @@ a:hover { text-decoration: underline; }
 .events li li { float: left; margin: 5px 10px 0 0; padding: 0; height: 15px; font-size: 12px; }
 .events li a.edit { top: 39px; font-size: 11px; }
 
+.detail { padding-left: 23px; }
 .detail ul { margin: -5px 0 15px; overflow: hidden; }
 .detail ul.tags { margin: 30px 0 0; }
 .detail ul.tags li { width: auto; background: url('../img/icons.png') no-repeat 0 1px; }
