--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -167,7 +167,7 @@ form li.other { display: block; width: 400px; margin: 0; }
 input.text, textarea, form input.othertext, select { height: 18px; margin: 0 0 20px; padding: 6px; background: #f9f9f9; box-shadow: inset 0 0 4px #999; border: 1px solid #919191; border-radius: 2px; font-size: 15px; width: 300px; } 
 input.wide, textarea.wide { width: 400px; }
 input.othertext { height: 14px; margin-left: 7px; width: 200px; }
-input.file { margin: 10px 0 30px; }
+input.file { margin: 10px 0; }
 input.date { background: #f9f9f9 url('../img/icons.png') no-repeat 150px -158px; width: 160px; }
 input.time { width: 100px; margin-left: 10px; background: #f9f9f9 url('../img/icons.png') no-repeat 91px -35px; }
 select { height: 32px; width: 100px; margin-left: 8px; background: #fff; border-radius: 0px; font-size: 12px; vertical-align: top; }
