tag control icons consolidated with icon spritesheet

--- a/alpha/home/static/css/style.css
+++ b/alpha/home/static/css/style.css
@@ -109,11 +109,12 @@ a:hover { text-decoration: underline; }
 #main { overflow: hidden; width: 940px; padding: 10px 0 60px; }
 
 #tags { width: 140px; margin: 20px 10px 0 0; float: left; font-size: 12px; }
-#tags li { height: 27px; margin-bottom: 1px; }
-#tags a { display: block; height: 27px; padding-left: 9px; border-radius: 3px; font-weight: bold; line-height: 27px; }
-#tags a.active, #tags a:hover { background: #343796 url('../img/tag-icons.png') no-repeat 120px 6px; color: #fff; text-decoration: none; }
-#tags a.active { background-position: 120px -31px; }
-#tags a.active:hover { background-position: 120px -68px; }
+#tags li { height: 28px; margin-bottom: 2px; }
+#tags a { display: block; height: 28px; padding-left: 9px; border-radius: 3px; font-weight: bold; line-height: 27px; }
+#tags a.active, #tags a:hover { background: #343796 url('../img/icons.png') no-repeat 119px -265px; color: #fff; text-decoration: none; }
+#tags a:active { background-position: 119px -291px; }
+#tags a.active { background-position: 119px -317px; }
+#tags a.active:hover { background-position: 119px -343px; }
 #tags li:first-child { margin-bottom: 2px; padding-bottom: 2px; border-bottom: 1px solid #ccc; }
 #tags li:first-child a.active { background: #343796; }
 #tags span.downtick, #tags span.uptick { display: block; float: left; width: 0; height: 0; margin: 3px 2px; border-left: 3px solid transparent; border-right: 3px solid transparent; border-top: 3px solid #000; }
