--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -27,7 +27,7 @@
   <p>{{ event.description }}</p>
   
   <ul class="tags">
-    <li>{% for tag in event.tags.all %}<a href="">{{ tag }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</li>
+    <li>{% for tag in event.tags.all %}<a href="{% url event_browse_tags tag.slug %}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</li>
   </ul>
 
 </section>
