--- a/alpha/home/templates/404.html
+++ b/alpha/home/templates/404.html
@@ -1,10 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'home.html' %}
 
-{% block page %}
-<div id="main">
+{% block content %}
   <header>
     <h1>Uh oh! Page not found.</h1>
     <p>Sorry about that.</p>
   </header>
-</div>
 {% endblock %}
