--- a/alpha/event/templates/events/creation_complete.html
+++ b/alpha/event/templates/events/creation_complete.html
@@ -5,7 +5,7 @@
     <p><a href="{% url event_view slug %}"> &rarr; See event in action</a></p>
     <p>An email has been sent to you with the details.</p>
     {% if user.is_authenticated %}
-    <p>To edit your event anytime, go to <a href="{% url event_browse %}">View your events</a>.</p>
+    <p>To edit your event anytime, go to <a href="{% url citi_user_events %}">View your events</a>.</p>
     {% endif %}
 
   </section><!-- .body -->
