--- a/alpha/event/templates/events/event_description.html
+++ b/alpha/event/templates/events/event_description.html
@@ -25,7 +25,7 @@
   </ul>
   
   <p>{{ event.description }}</p>
-  
+  {% if event.website %}<p><a href="{{ event.website }}">Website</a></p>{% endif %}
   <ul class="tags">
     <li>{% for tag in event.tags.all %}<a href="{% url event_browse_tags tag.slug %}">{{ tag }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</li>
   </ul>
