--- a/alpha/citi_user/templates/registration/activate.html
+++ b/alpha/citi_user/templates/registration/activate.html
@@ -2,13 +2,15 @@
 
 {% block content %}
 <div id="activate">
-  <header>
-    <h1>Activation failed</h1>
-    <p>Key used: {{ activation_key }}</p>
-  </header>
-  <section>
-    <p>Please recheck your email to ensure you used the proper key</p>
-    <p>Click <a href="{% url registration_register %}">here</a> to sign up again</p>
-  </section>
+  {% if account %}
+    <h1>Activated!</h1>
+    <p>Click <a href="{% url login %}">here</a> to sign in.</p>
+  {% else %}
+    <h1>Uhoh! Activation failed</h1>
+    <section>
+      <p>Please recheck your email to ensure you used the proper key</p>
+      <p>Click <a href="{% url registration_register %}">here</a> to sign up again</p>
+    </section>
+  {% endif %}
 </div>
 {% endblock %}
