fixed button on detail event

--- a/alpha/home/templates/header.html
+++ b/alpha/home/templates/header.html
@@ -33,7 +33,7 @@
   <p><span class="white">Want your city to be next?</span><br><a href="#" onclick="feedback_widget.show(); return false;">Let us know.</a></p>
 </aside>
 
-{% if browsing %}
+{% if browse_bar %}
 <nav id="date-nav">
   <ul>
     <li>
