--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js{% if browsing %} browse{% endif %}" lang="en">
+<html class="no-js{% if browse_bar %} browse{% endif %}" lang="en">
 <head>
   <meta charset="utf-8">
 
