active tags go to the top of the list

--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -24,26 +24,54 @@ browse_bar: the boolean stating to the header that we want a nav list of dates i
     {% for tag in all_tags %}
       {% if tag.slug == "" %}
       <li>
-	<a href = "{% url event_browse_date date=page_date %}"{{ tag.status|safe }}>{{ tag.name }} ({{ tag.number }})</a>
+	<a href = "{% url event_browse_date date=page_date %}" {% if tag.status %}class="{{ tag.status|safe }}"{% endif %}>{{ tag.name }} ({{ tag.number }})</a>
       </li>
-      {% else %}
-        {% if tag.number > 0 %}
-          {% if page_date %}
+      {% endif %}
+    {% endfor %}
+    {% for tag in all_tags %}
+      {% if tag.status %}
+      {% if tag.number > 0 %}
+        {% if page_date %}
             {% if page_num < 2 %}
               <li>
-	        <a href = "{% url event_browse_tags_date old_tags=tag.slug date=page_date %}"{{ tag.status|safe}}>{{ tag.name }} ({{ tag.number }})</a>
+	        <a href = "{% url event_browse_tags_date old_tags=tag.slug date=page_date %}" class="{{ tag.status|safe }}">{{ tag.name }} ({{ tag.number }})</a>
 	      </li>
 	    {% else %}
               <li>
-	        <a href = "{% url event_browse_tags_date_num old_tags=tag.slug date=page_date num=page_num %}"{{ tag.status|safe }}>{{ tag.name }} ({{ tag.number }})</a>
+	        <a href = "{% url event_browse_tags_date_num old_tags=tag.slug date=page_date num=page_num %}" class="{{ tag.status|safe }}">{{ tag.name }} ({{ tag.number }})</a>
 	      </li>
 	    {% endif %}
 	  {% else %}
             <li>
-	      <a href = "{% url event_browse_tags old_tags=tag.slug %}"{{ tag.status|safe }}>{{ tag.name }} ({{ tag.number }})</a>
+	      <a href = "{% url event_browse_tags old_tags=tag.slug %}" class="{{ tag.status|safe }}">{{ tag.name }} ({{ tag.number }})</a>
 	    </li>
 	  {% endif %}
         {% endif %}
+      {% endif %}
+      {% endif %}
+    {% endfor %}
+    {% for tag in all_tags %}
+      {% if not tag.status %}
+
+      {% if tag.number > 0 %}
+        {% if page_date %}
+            {% if page_num < 2 %}
+              <li>
+	        <a href = "{% url event_browse_tags_date old_tags=tag.slug date=page_date %}" >{{ tag.name }} ({{ tag.number }})</a>
+	      </li>
+	    {% else %}
+              <li>
+	        <a href = "{% url event_browse_tags_date_num old_tags=tag.slug date=page_date num=page_num %}" >{{ tag.name }} ({{ tag.number }})</a>
+	      </li>
+	    {% endif %}
+	  {% else %}
+            <li>
+	      <a href = "{% url event_browse_tags old_tags=tag.slug %}">{{ tag.name }} ({{ tag.number }})</a>
+	    </li>
+	  {% endif %}
+        {% endif %}
+      {% endif %}
+ 
       {% endif %}
     {% endfor %}
     </ul>
