need to pull all tags out of tag list

--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -21,16 +21,21 @@ browse_bar: the boolean stating to the header that we want a nav list of dates i
 <aside id="tags">
   <nav>
     <ul>
-    {% for tag in all_tags %}
+    {% for tag in all_tags|slice:":1" %}
       {% if tag.slug == "" %}
       <li>
 	<a href = "{% url event_browse_date date=page_date %}" {% if tag.status %}class="{{ tag.status|safe }}"{% endif %}>{{ tag.name }} ({{ tag.number }})</a>
       </li>
       {% endif %}
     {% endfor %}
+
     {% for tag in all_tags %}
       {% if tag.status %}
+      {% if tag.slug == "" %}
+
+      {% else %}
       {% if tag.number > 0 %}
+      
         {% if page_date %}
             {% if page_num < 2 %}
               <li>
@@ -45,33 +50,36 @@ browse_bar: the boolean stating to the header that we want a nav list of dates i
             <li>
 	      <a href = "{% url event_browse_tags old_tags=tag.slug %}" class="{{ tag.status|safe }}">{{ tag.name }} ({{ tag.number }})</a>
 	    </li>
-	  {% endif %}
         {% endif %}
+
+      {% endif %}
       {% endif %}
       {% endif %}
     {% endfor %}
-    {% for tag in all_tags %}
-      {% if not tag.status %}
 
-      {% if tag.number > 0 %}
-        {% if page_date %}
-            {% if page_num < 2 %}
-              <li>
-	        <a href = "{% url event_browse_tags_date old_tags=tag.slug date=page_date %}" >{{ tag.name }} ({{ tag.number }})</a>
-	      </li>
+    {% for tag in all_tags %}
+      {% if tag.status == "" %}
+      {% if tag.slug != "" %}
+        {% if tag.number > 0 %}
+
+            {% if page_date %}
+              {% if page_num < 2 %}
+                <li>
+	          <a href = "{% url event_browse_tags_date old_tags=tag.slug date=page_date %}" >{{ tag.name }} ({{ tag.number }})</a>
+	        </li>
+	      {% else %}
+                <li>
+	          <a href = "{% url event_browse_tags_date_num old_tags=tag.slug date=page_date num=page_num %}" >{{ tag.name }} ({{ tag.number }})</a>
+	        </li>
+	      {% endif %}
 	    {% else %}
               <li>
-	        <a href = "{% url event_browse_tags_date_num old_tags=tag.slug date=page_date num=page_num %}" >{{ tag.name }} ({{ tag.number }})</a>
+	        <a href = "{% url event_browse_tags old_tags=tag.slug %}">{{ tag.name }} ({{ tag.number }})</a>
 	      </li>
 	    {% endif %}
-	  {% else %}
-            <li>
-	      <a href = "{% url event_browse_tags old_tags=tag.slug %}">{{ tag.name }} ({{ tag.number }})</a>
-	    </li>
-	  {% endif %}
+
         {% endif %}
-      {% endif %}
- 
+        {% endif %}
       {% endif %}
     {% endfor %}
     </ul>
