--- a/alpha/citi_user/templates/registration/activate.html
+++ b/alpha/citi_user/templates/registration/activate.html
@@ -4,7 +4,7 @@
 <div id="activate">
   {% if account %}
     <h1>Activated!</h1>
-    <p>Click <a href="{% url login %}">here</a> to sign in.</p>
+    <p>Click <a href="{% url auth_login %}">here</a> to sign in.</p>
   {% else %}
     <h1>Uhoh! Activation failed</h1>
     <section>
