added sub headers for days

--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -57,6 +57,10 @@ browse_bar: the boolean stating to the header that we want a nav list of dates i
     {% endif %}
     <ul class="events">
       {% for event in set.events %}
+        {% load date_formatting %}
+        {% ifchanged event.start_time|just_day %}
+          <li><h2>{{ event.start_time|just_day }}</h2></li>
+        {% endifchanged %}
         {% include 'events/event_description_small.html' %}
       {% empty %}
         {% include 'events/no_events.html' %}
